--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5",
-    "ws": "^8.18.0"
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "eslint": "^8",
