--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
     "mongoose": "^8.6.3",
     "next": "14.2.12",
     "next-auth": "^4.24.7",
